--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
         </div>
         <div class="card">
           <h2>Contact</h2>
-          <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a><br />Phone: <a href="tel:+1-650-000-0000">+1 (650) 000‑0000</a></p>
-          <p class="muted">Replace contact details with your preferred info.</p>
+          <p>Email: <a href="mailto:abhishekrai@gmail.com">abhishekrai@gmail.com</a><br />Phone: <a href="tel:+1-408-512-1897">+1 (408) 512‑1897</a></p>
         </div>
       </div>
     </section>
