--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
   </header>
 
   <main>
+<section class="section">
+  <div class="wrap">
+    <div class="card img-frame">
+      <img src="fairmeadow-placeholder.jpg" alt="Fairmeadow Robotics team placeholder" />
+    </div>
+  </div>
+</section>    
     <section class="hero">
       <div class="wrap grid">
         <div class="card">
@@ -137,7 +144,7 @@
         <div class="card">
           <h2>Calendar & Location</h2>
           <ul>
-            <li><strong>Location:</strong> Palo Alto (near Fairmeadow Elementary; final room TBD).</li>
+            <li><strong>Location:</strong> Palo Alto (near Fairmeadow Elementary; at a residence).</li>
             <li><strong>Schedule:</strong> Targeting one weekday after school; confirmed once the group forms.</li>
             <li><strong>Season flow:</strong> Intro &amp; safety → Build basic bots → Sensors &amp; autonomy → Mini‑challenges → Optional competition exploration.</li>
           </ul>
@@ -191,19 +198,22 @@
       </div>
     </section>
 
-    <section id="coach" class="section">
-      <div class="wrap two-col">
-        <div class="card">
-          <h2>About the Coach</h2>
-          <p>I’m <strong><a href="Certificate.pdf" target="_blank" rel="noopener">a certified VEX/RECF coach</a></strong>, an ex‑Googler and <strong>2× founder</strong>, and a parent of a 5th grader at <strong>Fairmeadow Elementary</strong> (plus a very curious 3‑year‑old). I love building things with <strong>Raspberry Pi and Arduino</strong> in my spare time. My spouse and I are long‑time Palo Alto residents and <strong>Project Cornerstone</strong> classroom readers for the past four years. I’m here to provide structure and safety—<strong>the kids lead the robotics</strong>.</p>
-        </div>
-        <div class="card">
-          <h2>Costs</h2>
-          <p>We’ll keep costs minimal and transparent (shared kits, optional event fees only if we scrimmage/compete). We’ll discuss a simple, per‑family share once interest is confirmed.</p>
-        </div>
-      </div>
-    </section>
-
+<section id="coach" class="section">
+  <div class="wrap two-col">
+    <div class="card">
+      <h2>About the Coach</h2>
+      <p>I’m <strong><a href="Certificate.pdf" target="_blank" rel="noopener">a certified VEX/RECF coach</a></strong>, an ex-Googler and <strong>2× founder</strong>, and a parent of a 5th grader at <strong>Fairmeadow Elementary</strong> (plus a very curious 3-year-old). I love building things with <strong>Raspberry Pi and Arduino</strong> in my spare time. My spouse and I are long-time Palo Alto residents and <strong>Project Cornerstone</strong> classroom readers for the past four years. I’m here to provide structure and safety—<strong>the kids lead the robotics</strong>.</p>
+    </div>
+    <div class="card img-frame" aria-label="Coach family photo">
+      <img src="family-placeholder.jpg" alt="Your family — coach and supporters" />
+    </div>
+    <div class="card">
+      <h2>Costs</h2>
+      <p>We’ll keep costs minimal and transparent (shared kits, optional event fees only if we scrimmage/compete). We’ll discuss a simple, per-family share once interest is confirmed.</p>
+    </div>
+  </div>
+</section>
+    
     <section id="faq" class="section">
       <div class="wrap">
         <div class="card faq">
