--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     // Interest form link (EDIT THIS VALUE)
     // TODO: Paste your Google Form link below.
     // Example: const INTEREST_FORM_URL = "https://forms.gle/your-form-id";
-    const INTEREST_FORM_URL = "#"; // ← replace with your form URL
+    const INTEREST_FORM_URL = "https://forms.gle/2d5WjAaFYAuSu3rN8"; // ← replace with your form URL
     document.getElementById('interestLink').addEventListener('click', (e) => {
       if (!INTEREST_FORM_URL || INTEREST_FORM_URL === '#') {
         e.preventDefault();
