--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <section class="section">
   <div class="wrap">
     <div class="card img-frame">
-      <img src="fairmeadow-placeholder.jpg" alt="Fairmeadow Robotics team placeholder" />
+      <img src="robotics.png" alt="Fairmeadow Robotics team placeholder" />
     </div>
   </div>
 </section>    
