--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="card img-frame" aria-label="Family photo placeholder">
           <!-- Replace the src below with your actual photo file name once added to the repo -->
-          <img src="family-placeholder.jpg" alt="Your family — coach and supporters" />
+          <img src="robotics.png" alt="Club Image" />
         </div>
       </div>
     </section>
