--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
             <p>We’re aiming for ~6 students to keep it hands‑on and student‑led.</p>
           </details>
           <details>
+            <summary>Is this robotics club affiliated with any Palo Alto Unified School District schools?</summary>
+            <p>No, this is a private robotics club run by parents.  Our children happen to attend Fairmeadow Elementary but we are not officially affiliated nor restricted to this school only.</p>
+          </details>
+          <details>
             <summary>Can parents observe or help?</summary>
             <p>Absolutely. Quick help with setup/cleanup is appreciated. Interested in coaching support? Please reach out—coaching helpers complete the <a href="https://recf.org/get-certified" target="_blank" rel="noopener">RECF Coach Certification</a>.</p>
           </details>
