--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <p style="margin-top:16px"><a class="cta" href="#join">Express Interest</a></p>
         </div>
         <div class="card img-frame" aria-label="Family photo placeholder">
-          <img src="robotics.jpg" alt="Club Image" />
+          <img src="robotics-3.png" alt="Club Image" />
         </div>
       </div>
     </section>
