--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </div>
         <div class="card">
           <h2>Contact</h2>
-          <p>Email: <a href="mailto:abhishekrai@gmail.com">abhishekrai@gmail.com</a><br />Phone: <a href="tel:+1-408-512-1897">+1 (408) 512‑1897</a></p>
+          <p>Email: <a href="mailto:abhishekrai@gmail.com">abhishekrai@gmail.com</a><br /></p>
         </div>
       </div>
     </section>
