--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Palo Alto VEX IQ (Recreational, Student‑Led)" />
   <meta property="og:description" content="Student‑led VEX IQ robotics team for 5th graders in Palo Alto, CA — fun, inclusive, and focused on STEM, teamwork, and creativity." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="family-placeholder.jpg" />
+  <meta property="og:image" content="family.jpg" />
   <meta name="theme-color" content="#0ea5e9">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,7 +99,7 @@
           </div>
           <p style="margin-top:16px"><a class="cta" href="#join">Express Interest</a></p>
         </div>
-        <div class="card img-frame" aria-label="Family photo placeholder">
+        <div class="card img-frame" aria-label="Family photo">
           <img src="robotics-2.jpg" alt="Club Image" />
         </div>
       </div>
@@ -197,7 +197,7 @@
       <p>I’m <strong><a href="Certificate.pdf" target="_blank" rel="noopener">a certified VEX/RECF coach</a></strong>, an ex-Googler and <strong>2× founder</strong>, and a parent of a 5th grader at <strong>Fairmeadow Elementary</strong> (plus a very curious 3-year-old). I love building things with <strong>Raspberry Pi and Arduino</strong> in my spare time. My wife, Manisha, and I are long-time Palo Alto residents and <strong>Project Cornerstone</strong> classroom readers for the past four years. I’m here to provide structure and safety—<strong>the kids lead the robotics</strong>.</p>
     </div>
     <div class="card img-frame" aria-label="Coach family photo">
-      <img src="family-placeholder.jpg" alt="Your family — coach and supporters" />
+      <img src="family.jpg" alt="Your family — coach and supporters" />
     </div>
     <div class="card">
       <h2>Costs</h2>
