--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section class="hero">
       <div class="wrap grid">
         <div class="card">
-          <span class="kicker">Recreational • Student‑Led • Inclusive</span>
+          <span class="kicker">Build and Learn • Student‑Led • Inclusive</span>
           <h1>Palo Alto VEX IQ<br/>for 5th Graders</h1>
           <p class="lead">Hands‑on robotics in Palo Alto, guided by a certified coach. Kids lead the design, building, and coding. No experience needed—curiosity welcome.</p>
           <div class="pill-row">
